# TwitchXX

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  TwitchSpy.sln
TwitchSpy/: MongoDB.cpp  MongoDB.h  MongoLogger.cpp  MongoLogger.h  ReadMe.txt  TwitchSpy.cpp  TwitchSpy.vcxproj  TwitchSpy.vcxproj.filters  stdafx.cpp  twitchxx.cfg
TwitchXX/: Api.cpp  Api.h  AuthToken.h  BitsLeaderboardEntry.cpp  BitsLeaderboardEntry.h  BitsLeaderboardOptions.cpp  BitsLeaderboardOptions.h  BroadcasterType.cpp  BroadcasterType.h  CMakeLists.txt  Clip.cpp  Clip.h  ClipOptions.cpp  ClipOptions.h  DBAdapter.h  Direction.cpp  Direction.h  Doxyfile  Entitlement.cpp  Entitlement.h  Game.cpp  Game.h  JsonWrapper.h  Log.cpp  Log.h  Logger.cpp  Logger.h  MakeRequest.cpp  MakeRequest.h  MakeRequest_Impl.cpp  MakeRequest_Impl.h  MongoDB.cpp  MongoDB.h  MongoLogger.cpp  MongoLogger.h  PeriodType.cpp  PeriodType.h  Property.h  ReadMe.txt  Request.cpp  (+84 more)
TwitchXX-Tests/: AppAccessToken.t.cpp  BitsLeaderboard.t.cpp  CMakeLists.txt  ChannelFeedTest.cpp  ChannelFeedTest.h  ChannelTest.cpp  ChannelTest.h  ChatTest.cpp  ChatTest.h  Clip.t.cpp  ClipTest.cpp  Entitlement.t.cpp  Game.t.cpp  ObjectsCreateTests.cpp  ReadMe.txt  Stream.t.cpp  StreamMetadata.t.cpp  TeamsTest.cpp  TeamsTest.h  TestConstants.h  TestLogger.cpp  TestLogger.h  TestUtils.cpp  TestUtils.h  TwitchXX-Tests.cpp  TwitchXX-Tests.vcxproj  TwitchXX-Tests.vcxproj.filters  TwitchXXTest.cpp  TwitchXXTest.h  User.t.cpp  UserAccessToken.t.cpp  UserFollows.t.cpp  UsersTest.cpp  UsersTest.h  Vide.t.cpp  Video.t.cpp  VideosTest.cpp  VideosTest.h  stdafx.cpp  twitchxx.cfg
TwitchXX-Tests/v5/: Action.t.cpp  Channel.t.cpp  ChannelFeed.t.cpp  UserFollows.t.cpp
TwitchXX/Auth/: AppAccessToken.cpp  AppAccessToken.h  AuthToken.h  UserAccessToken.cpp  UserAccessToken.h
TwitchXX/docs/: Doxyfile.in
TwitchXX/v5/: Action.cpp  Action.h  Channel.cpp  Channel.h  Commercial.cpp  Commercial.h  Community.cpp  Community.h  Create.h  FeedPost.cpp  FeedPost.h  Subscription.cpp  Subscription.h  Team.cpp  Team.h  User.cpp  User.h  UserFollows.cpp  UserFollows.h  Video.cpp  Video.h
cmake/: Findcpprestsdk.cmake
docker/: Dockerfile  README.md
